(test
 (name test_pgn_parser)
 (libraries pgn_parser qcheck))

(test
 (name test_lichess_api_pbt)
 (libraries lichess_api qcheck)
 (package lichess_api))

(test
 (name test_chess_com_api_pbt)
 (libraries chess_com_api qcheck)
 (package chess_com_api))



(test
 (name test_zobrist)
 (libraries pgn_parser))

(executable
 (name test_lichess_api)
 (public_name test_lichess_api)
 (libraries pgn_parser lichess_api lwt lwt.unix)
 (package lichess_api))

(executable
 (name test_lichess_api_offline)
 (public_name test_lichess_api_offline)
 (libraries pgn_parser lichess_api)
 (package lichess_api))

(executable
 (name test_integration)
 (public_name test_integration)
 (libraries pgn_parser lichess_api)
 (package lichess_api))

(executable
 (name test_chess_com_api)
 (public_name test_chess_com_api)
 (libraries pgn_parser chess_com_api lwt lwt.unix)
 (package chess_com_api))

(executable
 (name test_chess_com_api_offline)
 (public_name test_chess_com_api_offline)
 (libraries pgn_parser chess_com_api)
 (package chess_com_api))

(executable
 (name test_unfinished_games)
 (libraries pgn_parser)
 (flags :standard -warn-error -A))

(executable
 (name test_advanced_moves)
 (libraries pgn_parser)
 (flags :standard -warn-error -A))



